--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@next/font": "^14.2.15",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.7.1",
-    "framer-motion": "^11.13.1",
+    "framer-motion": "^11.14.4",
     "lucide-react": "^0.468.0",
     "motion": "^11.13.1",
-    "next": "15.0.4",
+    "next": "^15.1.0",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
