--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next/font": "^14.2.15",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.7.1",
+    "autoprefixer": "^10.4.20",
     "framer-motion": "^11.14.4",
     "lucide-react": "^0.468.0",
     "motion": "^11.13.1",
@@ -28,8 +29,8 @@
     "@types/react-dom": "^19",
     "eslint": "^8",
     "eslint-config-next": "15.0.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.16",
     "typescript": "^5"
   }
 }
